добавил заметку о лицензии в ридми

--- a/readme.adoc
+++ b/readme.adoc
@@ -1,3 +1,5 @@
 *The official test instance periodically runs with ID https://discord.com/users/1106701151774199858[`1106701151774199858`].*
 
-*all the abouts and all the interfaces must be in English*, as the project is proposed for international use, but the project itself is developed by a Russian organization, so the *in-code commentaries and commits must be in Russian* to not obscure the development process. Read more at link:contributing.adoc[`contributing.adoc`].
+*All the abouts and all the interfaces must be in English* as the project is proposed for international use, but the project itself is developed by a Russian organization, so the *in-code commentaries and commits must be in Russian* to not obscure the development process. Read more at link:contributing.adoc[`contributing.adoc`].
+
+*The source code is licensed under CC0* as no one of the contributors has the resources to defend the author's rights. Read more at link:license.adoc[`license.adoc`].
